# RelativisticElectrodynamics0.1

./: CMakeLists.txt  README.md  base.cpp  imgui.ini  vcpkg.json
include/: greatCommon.h  greatLogger.h  greatMyObjectsPool.h  greatOpenGLHandlers.h  greatShadersExtractor.h  greatStageClass.h  greatStagesPool.h
shaders/: common.glsl  get_field.glsl  uniform.glsl
shaders/arrows_shader/: base.glsl  compute.glsl  fragment.glsl  geometry.glsl  vertex copy.glsl  vertex.glsl
shaders/spheres_shader/: compute.glsl  fragment.glsl  vertex.glsl
shaders/test/: fragment.glsl  geometry.glsl  vertex.glsl
src/: greatOpenGLHandlers.cpp  greatShadersExtractor.cpp  main.cpp
